<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.synzura.ctools.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/toolsFragment"
        android:name="com.synzura.ctools.ui.tools.ToolsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.synzura.ctools.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
        
</navigation> 